# openpisci

./: .gitignore  BUILD.md  CHANGELOG.md  LICENSE  README.md  README.md.orig  README_CN.md  README_EN.md  check_output.txt  commit_msg.txt  index.html  package-lock.json  package.json  release_body.json  release_notes.md  vite.config.ts
.github/workflows/: ci.yml
docs/: architecture.md  chat-ui-protocol.md  codez-design.md  openclaw-parity-matrix.md  openpisci-headless-cli.md  openpisci-swe-lite.md  pisci.chat.catalog.json
examples/user-tools/email/: README.md  index.ts  manifest.json
scripts/: emoji-to-png.mjs  prepare-tauri-sidecars.mjs  smoke-test.ps1  upload-release-asset.ps1
scripts/bench_compression/: README.md  info_theory.py  judge.py  run_bench.py  run_judge.py
scripts/bench_compression/adapters/: claw.py  common.py  hermes.py  pisci.py
scripts/bench_compression/results/: RESULTS.md  benchmark_results.json
scripts/bench_compression/samples/: _questions_cache.json  hard_01_multi_day_project.json  hard_02_schema_retry_chain.json  hard_03_tool_result_flood.json  hard_04_cross_session_recall.json  tool_01_bug_hunt.json  tool_02_data_pipeline.json  tool_03_browser_research.json
scripts/bench_swe_lite/: common.py  review_harness.py  run_swe_lite.py  score_swe_lite.py
scripts/bench_swe_lite/cases/: manifest.toml
src/: App.css  App.tsx  main.tsx  theme.css
src-tauri/: Cargo.toml  README.md  README_CN.md  build.rs  tauri.conf.json  test_temp2.vbs
src-tauri/.cargo/: config.toml
src-tauri/bench/: Cargo.toml
src-tauri/bench/src/: main.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/prompts/: koi_activate_for_messages.txt  koi_execute_todo.txt
src-tauri/src/: desktop_app.rs  headless_cli.rs  host.rs  lib.rs  live_smoke.rs  main.rs  notify.rs  project_context.rs
src-tauri/src/agent/: bench_compact.rs  compaction.rs  compaction_eval.rs  host.rs  live_smoke.rs  loop_.rs  messages.rs  mod.rs  plan.rs  rule_preprocess.rs  state_frame.rs  summary_worker.rs  tool.rs  tool_receipt.rs  vision.rs
src-tauri/src/agent/harness/: config.rs  context_builder.rs  layered_prompt.rs  request_builder.rs  runner.rs
src-tauri/src/app/: bootstrap.rs  headless.rs  logging.rs  markers.rs  mod.rs  shutdown.rs
src-tauri/src/browser/: download.rs  mod.rs
src-tauri/src/commands/: board.rs  chat.rs  collab_trial.rs  config.rs  debug.rs  fish.rs  gateway.rs  interactive.rs  journal.rs  koi.rs  mcp.rs  memory.rs  mod.rs  permission.rs  platform.rs  pool.rs  scene.rs  scheduler.rs  settings.rs  skills.rs  system.rs  test_runner.rs  tools.rs  user_tools.rs  window.rs
src-tauri/src/commands/chat/: collab_trial.rs  debug.rs  fish.rs  gateway.rs  scheduler.rs
src-tauri/src/commands/config/: audit.rs  bundled_mcp.rs  enterprise_capability.rs  mcp.rs  scene.rs  settings.rs  tools.rs
src-tauri/src/commands/platform/: calibration.rs  system.rs  window.rs
src-tauri/src/commands/pool/: board.rs  koi.rs
src-tauri/src/fish/: mod.rs
src-tauri/src/gateway/: dingtalk.rs  discord.rs  feishu.rs  matrix.rs  mod.rs  slack.rs  teams.rs  telegram.rs  webhook.rs  wechat.rs  wecom.rs
src-tauri/src/koi/: bridge.rs  event_bus.rs  mod.rs  runtime.rs
src-tauri/src/llm/: claude.rs  deepseek.rs  kimi.rs  minimax.rs  mod.rs  mod.rs.bak  openai.rs  qwen.rs  zhipu.rs
src-tauri/src/memory/: mod.rs  vector.rs
src-tauri/src/pisci/: heartbeat.rs  mod.rs  project_state.rs
src-tauri/src/policy/: gate.rs
src-tauri/src/pool/: bridge.rs  mod.rs
src-tauri/src/runtime/: ide_notify_hooks.rs  koi.rs  koi_prompt.rs  mod.rs
src-tauri/src/scheduler/: cron.rs  mod.rs
src-tauri/src/security/: injection.rs  mod.rs  secrets.rs
src-tauri/src/skills/: loader.rs
src-tauri/src/store/: db.rs  mod.rs  settings.rs
src-tauri/src/tools/: app_control.rs  browser.rs  calibration.rs  call_fish.rs  call_koi.rs  chat_ui.rs  chat_ui_listen.rs  chat_ui_patch.rs  code_run.rs  com_invoke.rs  com_tool.rs  desktop_automation.rs  dpi.rs  elevate.rs  email.rs  file_diff.rs  file_list.rs  file_read.rs  file_search.rs  file_write.rs  im_channel.rs  im_send.rs  mcp.rs  memory_tool.rs  mod.rs  office.rs  pdf.rs  plan_todo.rs  pool_chat.rs  pool_org.rs  powershell.rs  process_control.rs  recall_tool.rs  screen.rs  shell.rs  skill_list.rs  skill_search.rs  ssh.rs  system_info.rs  uia.rs  (+4 more)
src-tauri/src/tools/call_koi/: mod.rs  runtime.rs
src-tauri/src/tools/screen/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/tests/: pool_event_bridge.rs
src/components/: ConfirmDialog.tsx  PromptDialog.tsx
src/components/About/: About.css  index.tsx
src/components/AuditLog/: index.tsx
src/components/Chat/: Chat.css  InteractiveCard.css  InteractiveCard.tsx  SessionPicker.tsx  composerUtils.ts  index.tsx
src/components/Debug/: CalibrationOverlay.tsx  Debug.css  index.tsx
src/components/Fish/: Fish.css  index.tsx
src/components/Memory/: index.tsx
src/components/Onboarding/: index.tsx
src/components/OperationSteps/: OperationSteps.css  index.tsx
src/components/Overlay/: Overlay.css  index.tsx
src/components/Pond/: Pond.css  index.tsx
src/components/Pond/Board/: Board.css  index.tsx
src/components/Pond/ChatPool/: ChatPool.css  index.tsx
src/components/Pond/Collab/: Collab.css  index.tsx
src/components/Pond/IDE/: AssistantPanel.tsx  FileTree.tsx  GitPanel.tsx  IDE.css  index.tsx  (+1 more)
src/components/Scheduler/: index.tsx
src/components/School/: School.css  index.tsx
src/components/Settings/: index.tsx
src/components/Skills/: index.tsx
src/components/Toaster/: Toaster.css  index.tsx
src/components/Tools/: Tools.css  index.tsx
src/components/UserTools/: UserTools.css  index.tsx
src/i18n/: en.ts  index.ts  zh.ts
src/services/: tauri.test.ts  tauri.ts
src/services/tauri/: chat.ts  config.ts  index.ts  platform.ts  pool.ts  tauri.test.ts
src/store/: index.ts
src/store/slices/: chat.ts  config.ts  pool.ts
src/test/: setup.ts
src/themes/: gold.css  light.css  violet.css
src/utils/: fontScale.ts  linkify.ts  projectPath.ts  session.ts  systemDependencies.ts
(+4 files in other folders)
