[package]
name = "pisci-desktop"
version = "0.1.0"
description = "Pisci Desktop — Windows AI Agent"
authors = ["Pisci Team"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pisci_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"

# HTTP client (LLM API calls) — use rustls to avoid openssl dependency
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite (bundled — no external dll needed)
rusqlite = { version = "0.31", features = ["bundled"] }

# Cron scheduling
tokio-cron-scheduler = "0.13"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
base64 = "0.22"
regex = "1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
dirs = "5"
urlencoding = "2"
# image encoding (replaces hand-written PNG encoder, supports JPEG for Vision API)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Browser automation via Chrome DevTools Protocol (cross-platform)
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }

# ZIP extraction for Chrome for Testing downloads
zip = { version = "2", default-features = false, features = ["deflate"] }

# Windows-specific (conditional)
[target.'cfg(target_os = "windows")'.dependencies]
# Windows UIA via COM
uiautomation = { version = "0.24", features = ["all"] }
# Win32 API for screenshots, clipboard, shell, window management
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
