[package]
name = "pisci-desktop"
version = "0.5.25"
description = "OpenPisci 锟?Open-source Windows AI Agent Desktop"
authors = ["Pisci Team"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pisci_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"

# HTTP client (LLM API calls) 锟?use rustls to avoid openssl dependency
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart", "gzip", "deflate", "brotli"], default-features = false }

# WebSocket client for Feishu long connection
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots", "connect"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# SQLite (bundled 锟?no external dll needed)
rusqlite = { version = "0.31", features = ["bundled"] }

# Cron scheduling
tokio-cron-scheduler = "0.13"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
base64 = "0.22"
regex = "1"
once_cell = "1"
getrandom = "0.2"
chacha20poly1305 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
async-trait = "0.1"
dirs = "5"
urlencoding = "2"
qrcode = "0.14"
# image encoding (replaces hand-written PNG encoder, supports JPEG for Vision API)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Browser automation via Chrome DevTools Protocol (cross-platform)
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }

# ZIP extraction for Chrome for Testing downloads
zip = { version = "2", default-features = false, features = ["deflate"] }
scraper = "0.25.0"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "hostname", "pool", "tokio1-rustls-tls"] }
imap = "2.4.1"
native-tls = "0.2"
mailparse = "0.15"

# SSH client 锟?use ring backend to avoid NASM dependency on Windows
russh = { version = "0.57", default-features = false, features = ["ring"] }

# PDF read/write
lopdf = { version = "0.34", features = ["nom_parser"] }
pdf-extract = "0.7"
tauri-plugin-single-instance = "2.4.0"
encoding_rs = "0.8.35"

# Windows-specific (conditional)
[target.'cfg(target_os = "windows")'.dependencies]
# Windows UIA via COM
uiautomation = { version = "0.24", features = ["all"] }
# Win32 API for screenshots, clipboard, shell, window management
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
