# Bench-only compression CLI. It links `pisci_desktop_lib`, so it must live in
# this workspace rather than the extracted piscis-engine — but it is its OWN
# crate (not a target of `pisci-desktop`) so Tauri's bundler never tries to
# ship it in the desktop installers. Build explicitly with:
#   cargo build -p pisci-bench --release   (binary: target/release/pisci_compact_one)
[package]
name = "pisci-bench"
version = "0.0.0"
edition = "2021"
publish = false
description = "Bench-only one-shot compression CLI for OpenPisci (not shipped)."

[[bin]]
name = "pisci_compact_one"
path = "src/main.rs"

[dependencies]
# Alias the dep key to the lib's crate name so `pisci_desktop_lib::…` resolves.
pisci_desktop_lib = { path = "..", package = "pisci-desktop" }
pisci-kernel = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
